infra/k8s/post-old.yml
apiVersion: v1
kind: Pod
metadata: 
  name: posts
spec: 
  containers: 
    - name: posts
      image: everorman/posts:0.0.1
