infra/k8s/posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: post-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: posts
  template: 
    metadata: 
      labels: 
        app: posts
    spec:
      containers: 
        - name: posts
          image: everorman/posts
