infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: query
  template: 
    metadata: 
      labels: 
        app: query
    spec:
      containers: 
        - name: query
          image: everorman/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec: 
  selector: 
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4004
      targetPort: 4004
